docs; Add system-level configuration docs and fix minor typo (#825)
Signed-off-by: Regina Scott <rescott@redhat.com>
Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/tests/k8s/1-025_validate_resource_ignore_differences/01-argocd-with-resource-ignore-difference.yaml
+++ b/tests/k8s/1-025_validate_resource_ignore_differences/01-argocd-with-resource-ignore-difference.yaml
@@ -16,7 +16,7 @@ spec:
           - abc
     resourceIdentifiers:
       - group: apps
-        kind: deployments
+        kind: Deployment
         customization:
           jqPathExpressions:
             - xyz
