--- a/tests/k8s/1-025_validate_resource_ignore_differences/01-assert.yaml
+++ b/tests/k8s/1-025_validate_resource_ignore_differences/01-assert.yaml
@@ -24,7 +24,7 @@ data:
     managedfieldsmanagers:
     - xyz
     - abc
-  resource.customizations.ignoreDifferences.apps_deployments: |
+  resource.customizations.ignoreDifferences.apps_Deployment: |
     jqpathexpressions:
     - xyz
     - abc
