Fixed kuttl test 022
Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/tests/k8s/1-022_validate_notifications/04-delete-app.yaml
+++ b/tests/k8s/1-022_validate_notifications/04-delete-app.yaml
@@ -6,3 +6,5 @@ commands:
   
     kubectl delete -n $NAMESPACE application.argoproj.io my-app-3
 - script: sleep 5
+- script: |
+    ! kubectl get -n $NAMESPACE application.argoproj.io my-app-3
