Updated 022 test step 4 verification
Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/tests/k8s/1-022_validate_notifications/04-delete-app.yaml
+++ b/tests/k8s/1-022_validate_notifications/04-delete-app.yaml
@@ -7,4 +7,8 @@ commands:
     kubectl delete -n $NAMESPACE application.argoproj.io my-app-3
 - script: sleep 5
 - script: |
-    ! kubectl get -n $NAMESPACE application.argoproj.io my-app-3
+    output=$(kubectl get -n $NAMESPACE application.argoproj.io my-app-3 --no-headers 2>/dev/null)
+    if [ -n "$output" ]; then
+      echo "my-app-3 still exists"
+      exit 1
+    fi
