Update Operator Role for Monitoring Flag (#925)
Signed-off-by: Arthur <arthur@arthurvardevanyan.com>
Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/bundle/manifests/argocd-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/argocd-operator.clusterserviceversion.yaml
@@ -1004,6 +1004,7 @@ spec:
           - monitoring.coreos.com
           resources:
           - prometheuses
+          - prometheusrules
           - servicemonitors
           verbs:
           - '*'
